--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "watch-test":"jest --watch"
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
@@ -24,5 +26,11 @@
     "react-material-ui-carousel": "^3.4.2",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "jest": "^29.7.0"
   }
 }
