--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "watch-test":"jest --watch"
+    "watch-test": "jest --watch"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.25.8",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
@@ -18,6 +19,7 @@
     "@mui/lab": "^5.0.0-alpha.131",
     "@mui/material": "^5.13.2",
     "autoprefixer": "10.4.14",
+    "jsdom": "^25.0.1",
     "next": "13.4.3",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
@@ -28,9 +30,14 @@
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.25.7",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0"
+  },
+  "jest": {
+    "testEnvironment": "jsdom"
   }
 }
